--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-"name": "supun2005",
+"name": "Dagaya",
 "version": "2.1.2",
-"description": "supun2005 has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️",
+"description": "Dagaya has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️",
 "main": "start.js",
 "scripts": {
-"start": "pm2 start start.js --deep-monitoring --attach --name supun2005",
-"stop": "pm2 stop supun2005",
-"restart": "pm2 restart supun2005"
+"start": "pm2 start start.js --deep-monitoring --attach --name Dagaya",
+"stop": "pm2 stop Dagaya",
+"restart": "pm2 restart Dagaya"
 },
 "dependencies": {
 "@whiskeysockets/baileys": "git+https://github.com/prabathLK/Baileys-6.0.0.git",
