--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-"name": "Dagaya",
+"name": "supun",
 "version": "2.1.2",
-"description": "Dagaya has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️",
+"description": "supun has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️",
 "main": "start.js",
 "scripts": {
-"start": "pm2 start start.js --deep-monitoring --attach --name Dagaya",
-"stop": "pm2 stop Dagaya",
-"restart": "pm2 restart Dagaya"
+"start": "pm2 start start.js --deep-monitoring --attach --name supun",
+"stop": "pm2 stop supun",
+"restart": "pm2 restart supun"
 },
 "dependencies": {
 "@whiskeysockets/baileys": "git+https://github.com/prabathLK/Baileys-6.0.0.git",
